<resources>
    <string name="app_name">User Interface</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Sebelumnya</string>

    <string name="bubble">Bubble</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama">Nama</string>
    <string name="kirim">Kirim</string>
    <string name="nim">NIM</string>
    <string name="jurusan">Jurusan</string>
    <string name="textNama">editNama</string>
    <string name="textNIM">editNIM</string>
    <string name="textJurusan">editJurusan</string>
</resources>