<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/blue"
        android:text="@string/kirim"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editJurusan" />

    <EditText
        android:id="@+id/editNama"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nama"
        android:background="@color/blue"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editNIM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <EditText
        android:id="@+id/editNIM"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nim"
        android:background="@color/blue"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editJurusan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editJurusan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/jurusan"
        android:background="@color/blue"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/bubble"
        android:layout_width="215dp"
        android:layout_height="207dp"
        android:layout_marginBottom="588dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/bubble_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>